--- a/views/index.html
+++ b/views/index.html
@@ -364,13 +364,13 @@
                 <div class='col-md-4 pt60 pb50 bg-faded'>
                     <div class="media pos-relative">
 
-                        <div class="media-body ">
+                        <div class="media-body " style="font-size:16px">
                             <h4 class="mt-0 mb10 ">Company History</h4>
                             NGM is a specialist law firm focusing on tax. It was founded in 2012 by three former tax partners at CMS who have 75 years of combined expertise. We are equally comfortable working with fellow professional advisors or directly with clients.
                         </div>
                     </div>
                 </div>
-                <div class='col-md-4 pt60 pb50 bg-faded'>
+                <div class='col-md-4 pt60 pb50 bg-faded' style="background-color:#D3D3D3; font-size:16px">
                     <div class="media pos-relative">
 
                         <div class="media-body ">
@@ -383,7 +383,7 @@
                 <div class='col-md-4 pt60 pb50 bg-faded'>
                     <div class="media pos-relative">
 
-                        <div class="media-body ">
+                        <div class="media-body " style="font-size:16px">
                             <h4 class="mt-0 mb10 ">NGM Private</h4>
                             Six years after forming the firm, we recognise that there is a demand for specialist tax advice by high net worth individuals and their families. So in 2018, we launched NGM Private. Read more about NGM Private here. (hyperlink to NGM Private tab if possible)
                         </div>
@@ -399,7 +399,7 @@
                 <div class="team-card-default">
                     <img src="images/team3.jpg" alt="" class="img-fluid rounded-circle">
                     <div class="team-default-content text-center pt30">
-                            <h4 class="mb0 text-uppercase">Mel Gibson</h4>
+                            <h4 class="mb0 text-uppercase">Mark Nichols</h4>
                             <span>Marketing manager</span>
                             <ul class="list-inline pt10">
                                 <li class="list-inline-item">
@@ -422,7 +422,7 @@
                 <div class="team-card-default">
                     <img src="images/team4.jpg" alt="" class="img-fluid rounded-circle">
                     <div class="team-default-content text-center pt30">
-                            <h4 class="mb0 text-uppercase">John Doe</h4>
+                            <h4 class="mb0 text-uppercase">Keith Gregory</h4>
                             <span>Marketing manager</span>
                             <ul class="list-inline pt10">
                                 <li class="list-inline-item">
@@ -445,7 +445,7 @@
                 <div class="team-card-default">
                     <img src="images/team5.jpg" alt="" class="img-fluid rounded-circle">
                     <div class="team-default-content text-center pt30">
-                            <h4 class="mb0 text-uppercase">John Doe</h4>
+                            <h4 class="mb0 text-uppercase">Simon Meredith</h4>
                             <span>Marketing manager</span>
                             <ul class="list-inline pt10">
                                 <li class="list-inline-item">
@@ -468,7 +468,7 @@
                 <div class="team-card-default">
                     <img src="images/team6.jpg" alt="" class="img-fluid rounded-circle">
                     <div class="team-default-content text-center pt30">
-                            <h4 class="mb0 text-uppercase">John Doe</h4>
+                            <h4 class="mb0 text-uppercase">Another</h4>
                             <span>Marketing manager</span>
                             <ul class="list-inline pt10">
                                 <li class="list-inline-item">
@@ -494,7 +494,7 @@
             <div class="container">
                 <div class="row">
                     <div class=" col-md-8 ml-auto mr-auto">
-                        <h1 class='text-uppercase'>this is where we put the small blurb. is this what you had in mind?</h1>
+                        <h1 class='text-uppercase'>Obtaining the right tax support is vital and avoids costly and time consuming disputes with HMRC. NGM Tax Law achieves this a wide range of corporate and private clients. Tax is what we know…Tax is what we do.</h1>
 
                         <!--                                    <a href='https://www.youtube.com/watch?v=cctFcl5EFYk' class='modal-video btn btn-white-outline btn-lg btn-rounded'>Watch our film</a>
                         -->
@@ -509,8 +509,8 @@
                     <div class="media">
 
                         <div class="media-body">
-                            <h4 class="mt-0 mb10 text-uppercase">Web design</h4>
-                           Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                            <h4 class="mt-0 mb10 text-uppercase">International Tax Planning</h4>
+                           Mergers and Acquisitons, corporate finance, reorganisations, joint ventures, new issues and private equity
                         </div>
                     </div>
                 </div>
@@ -518,8 +518,8 @@
                     <div class="media">
 
                         <div class="media-body">
-                            <h4 class="mt-0 mb10 text-uppercase">Marketing</h4>
-                           Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                            <h4 class="mt-0 mb10 text-uppercase">Property</h4>
+                            International and UK property taxation and Stamp Duty Land Tax (SDLT)
                         </div>
                     </div>
                 </div>
@@ -527,8 +527,8 @@
                     <div class="media">
 
                         <div class="media-body">
-                            <h4 class="mt-0 mb10 text-uppercase">Development</h4>
-                           Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                            <h4 class="mt-0 mb10 text-uppercase">Cross-Border Transactions</h4>
+                            Capital markets, structured finance, UK and cross border leasing, financial product development and derivatives
                         </div>
                     </div>
                 </div>
@@ -538,8 +538,8 @@
                     <div class="media">
 
                         <div class="media-body">
-                            <h4 class="mt-0 mb10 text-uppercase">Analytics</h4>
-                           Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                            <h4 class="mt-0 mb10 text-uppercase">Employee Tax Planning</h4>
+                           Incentive schemes that motivate employees and really work
                         </div>
                     </div>
                 </div>
@@ -547,8 +547,8 @@
                     <div class="media">
 
                         <div class="media-body">
-                            <h4 class="mt-0 mb10 text-uppercase">Seo Optimize</h4>
-                           Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                            <h4 class="mt-0 mb10 text-uppercase">Private Clients</h4>
+                           Pragmatic and Effective Solutions and tax structures for high net-worth individuals and families
                         </div>
                     </div>
                 </div>
@@ -556,15 +556,15 @@
                     <div class="media">
 
                         <div class="media-body">
-                            <h4 class="mt-0 mb10 text-uppercase">Branding</h4>
-                           Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                            <h4 class="mt-0 mb10 text-uppercase">HMRC</h4>
+                           Dealing with HMRC enquiries to avoid costly and stressful repercussions
                         </div>
                     </div>
                 </div>
            </div>
        </div>
        <div class="half-image-content bg-dark">
-           <div class="content-img bg-parallax pos-right hidden-md-down" data-jarallax='{"speed": 0.2}' style="background:url(images/img-half1.jpg) no-repeat;">
+           <div class="content-img bg-parallax pos-right hidden-md-down" data-jarallax='{"speed": 0.2}' style="background:url(images/Working-With-Other-Advisors.jpg) no-repeat;">
            </div>
            <img src="images/img-half1.jpg" class="visible-lg-down hidden-lg-up img-fluid" alt="">
            <div class="container">
@@ -594,19 +594,19 @@
        <div class="container pt90  pb60">
            <div class="row align-items-center">
                <div class="col-lg-6 mb30">
-                   <img src="images/sketch1.jpg" alt="" class="img-fluid">
+                   <img src="images/NGM-Private.jpg" alt="" class="img-fluid">
                </div>
                <div class="col-lg-6 mb30">
                    <h2>
                        NGM Private
                      </h2>
-                   <p>
+                   <p style="font-size:18px">
                        Are you struggling to understand how to pass on your assets to your children? Do you have a complicated estate with properties abroad? You’re in good company.
                    </p>
-                   <p>
+                   <p style="font-size:18px">
                        We recognise that there is increasing demand for expert tax advice by high net worth individuals and their families. That’s why we set up NGM Private in 2018.
                    </p>
-                   <p>
+                   <p style="font-size:18px">
                      Tax affairs are challenging. But exposure can be minimised with the right advice. Our extensive experience and expertise will deliver pragmatic solutions to your tax affairs. We are responsive and, if you would prefer, are happy to work on a fixed fee basis which is fair and transparent.
 
 
@@ -615,12 +615,12 @@
                </div>
            </div>
        </div>
-       <div class="page-custom-header title-space-lg bg-parallax mb80 parallax-overlay" data-jarallax='{"speed": 0.2}' style='background-image: url("https://marketplace.canva.com/MADGv7m-y9c/6/thumbnail_large/canva-man-smiling-while-listening-to-music-MADGv7m-y9c.jpg");background-position:top center;'>
+       <div class="page-custom-header title-space-lg bg-parallax mb80 parallax-overlay" data-jarallax='{"speed": 0.2}' style='background-image: url(images/Transparent-and-Fair.jpg); background-position:top center;'>
            <div class="container">
                <div class="row">
                    <div class=" col-md-6">
-                       <h2 class="text-white">Fee Structure </h2>
-                       <p class="text-white-gray">
+                       <h2 class="text-white">Fair and Transparent Fees </h2>
+                       <p class="text-white-gray" style="font-size:18px">
                             We are acutely aware that cost matters to all of our clients. When offering tax assistance to fellow professional advisors, or directly to our corporate and private clients, we can work on a fixed fee basis, if preferred, which is fair and transparent.
 
                           Our flexible approach to pricing means that you don’t have to worry about escalating fees. There are no hidden costs and no nasty surprises. Just really good, coherent, specialist tax advice.
